--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title>oohkyoto_</title>
+    <title>Kyo's Linktree</title>
     <link rel="icon" type="image/x-icon" href="/images/avatar.png"> <meta name="description" content="Links to oohkyoto_'s TikTok, Snapchat, Instagram, GitHub, and more.">
 
-    <meta name="keywords" content="oohkyoto_, tiktok, snapchat, instagram, github, developer">
+    <meta name="keywords" content="Kyo Linktree">
 
-    <meta rel="canonical" href="https://yourwebsite.com/oohkyoto"> <meta name="author" content="oohkyoto_">
+    <meta rel="canonical" href="https://voidcore.dev"> <meta name="author" content="oohkyoto_">
 
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/style.css">
@@ -22,10 +22,10 @@
     <div class="container">
         <div class="column">
 
-            <img class="avatar avatar--rounded" src="images/avatar.png" srcset="images/avatar@2x.png 2x" alt="oohkyoto_'s profile picture">
+            <img class="avatar avatar--rounded" src="images/avatar.jpeg" srcset="images/avatar.JPEG" alt="oohkyoto_'s profile picture">
 
             <h1>
-              <div>oohkyoto_</div>
+              <div>Kyo!</div>
             </h1>
 
             <p>Check out my links below!</p>
