--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <div class="container">
         <div class="column">
 
-            <img class="avatar avatar--rounded" src="images/avatar.jpeg" srcset="images/avatar.JPEG" alt="oohkyoto_'s profile picture">
+            <img class="avatar avatar--rounded" src="images/avatar.png" srcset="images/avatar.JPEG" alt="oohkyoto_'s profile picture">
 
             <h1>
               <div>Kyo!</div>
