--- a/index.html
+++ b/index.html
@@ -34,9 +34,11 @@
 
               <a class="button button-tiktok" href="https://www.tiktok.com/@oohkyoto_?_t=ZN-8wGTmztHXqo&_r=1" target="_blank" rel="noopener" role="button"><img class="icon" aria-hidden="true" src="images/icons/tiktok.svg" alt="TikTok Logo">TikTok</a>
 
+              <a class="button button-instagram" href="https://www.instagram.com/oohkyoto?igsh=MTh6bmg3d3FyNnAwaQ%3D%3D&utm_source=qr" target="_blank" rel="noopener" role="button"><img class="icon" aria-hidden="true" src="images/icons/instagram.svg" alt="Instagram Logo">Instagram</a>
+
               <a class="button button-snapchat" href="https://snapchat.com/t/nZB4xyIi" target="_blank" rel="noopener" role="button"><img class="icon" aria-hidden="true" src="images/icons/snapchat.svg" alt="Snapchat Logo">Snapchat</a>
 
-              <a class="button button-instagram" href="https://www.instagram.com/oohkyoto?igsh=MTh6bmg3d3FyNnAwaQ%3D%3D&utm_source=qr" target="_blank" rel="noopener" role="button"><img class="icon" aria-hidden="true" src="images/icons/instagram.svg" alt="Instagram Logo">Instagram</a>
+              <a class="button button-discord" href="https://discord.com/users/397439465708322819" target="_blank" rel="noopener" role="button"><img class="icon" aria-hidden="true" src="images/icons/discord.svg" alt="Discord Logo">Discord</a>
 
               <a class="button button-default" href="mailto:kyo@voidcore.dev" target="_blank" rel="noopener" role="button"><img class="icon" aria-hidden="true" src="images/icons/generic-email.svg" alt="Email Icon">Email</a>
 
