--- a/index.html
+++ b/index.html
@@ -40,10 +40,12 @@
 
               <a class="button button-spotify" href="https://open.spotify.com/user/zsr4ynyihxjeme56cfm6zyf3q?si=PWWQBxqjQ42rNwCbtgIdWw" target="_blank" rel="noopener" role="button"><img class="icon" aria-hidden="true" src="images/icons/spotify.svg" alt="Spotify Logo">Spotify</a>
 
+              <a class="button button-airbuds" href="https://i.airbuds.fm/oohkyoto/H0eRFLPkBt" target="_blank" rel="noopener" role="button"><img class="icon" aria-hidden="true" src="images/icons/airbuds.jpg" alt="Airbuds.fm Logo">Airbuds.fm</a>
+
               <a class="button button-discord" href="https://discord.com/users/397439465708322819" target="_blank" rel="noopener" role="button"><img class="icon" aria-hidden="true" src="images/icons/discord.svg" alt="Discord Logo">Discord</a>
 
               <a class="button button-github" href="https://github.com/Kyoo123" target="_blank" rel="noopener" role="button"><img class="icon" aria-hidden="true" src="images/icons/github.svg" alt="GitHub Logo">GitHub</a>
-                
+
               <a class="button button-default" href="mailto:kyo@voidcore.dev" target="_blank" rel="noopener" role="button"><img class="icon" aria-hidden="true" src="images/icons/generic-email.svg" alt="Email Icon">Email</a>
 
               <a class="button button-default" href="https://nohello.net/en/" target="_blank" rel="noopener" role="button"><img class="icon" aria-hidden="true" src="images/icons/generic-website.svg" alt="Website Icon">No Hello</a>
