--- a/index.html
+++ b/index.html
@@ -42,6 +42,8 @@
 
               <a class="button button-airbuds" href="https://i.airbuds.fm/oohkyoto/H0eRFLPkBt" target="_blank" rel="noopener" role="button"><img class="icon" aria-hidden="true" src="images/icons/airbuds.jpg" alt="Airbuds.fm Logo">Airbuds.fm</a>
 
+              <a class="button button-ngl" href="https://ngl.link/oohkyoto" target="_blank" rel="noopener" role="button"><img class="icon" aria-hidden="true" src="images/icons/ngl.svg" alt="NGL Logo">NGL</a>
+
               <a class="button button-discord" href="https://discord.com/users/397439465708322819" target="_blank" rel="noopener" role="button"><img class="icon" aria-hidden="true" src="images/icons/discord.svg" alt="Discord Logo">Discord</a>
 
               <a class="button button-github" href="https://github.com/Kyoo123" target="_blank" rel="noopener" role="button"><img class="icon" aria-hidden="true" src="images/icons/github.svg" alt="GitHub Logo">GitHub</a>
