--- a/index.html
+++ b/index.html
@@ -42,7 +42,10 @@
 
               <a class="button button-airbuds" href="https://i.airbuds.fm/oohkyoto/H0eRFLPkBt" target="_blank" rel="noopener" role="button"><img class="icon" aria-hidden="true" src="images/icons/airbuds.jpg" alt="Airbuds.fm Logo">Airbuds.fm</a>
 
+
               <a class="button button-ngl" href="https://ngl.link/oohkyoto" target="_blank" rel="noopener" role="button"><img class="icon" aria-hidden="true" src="images/icons/ngl.svg" alt="NGL Logo">NGL</a>
+
+              <a class="button button-bluesky" href="https://bsky.app/profile/voidcore.dev" target="_blank" rel="noopener" role="button"><img class="icon" aria-hidden="true" src="images/icons/bluesky.svg" alt="BlueSky Logo">Bluesky</a>
 
               <a class="button button-discord" href="https://discord.com/users/397439465708322819" target="_blank" rel="noopener" role="button"><img class="icon" aria-hidden="true" src="images/icons/discord.svg" alt="Discord Logo">Discord</a>
 
