--- a/privacy.html
+++ b/privacy.html
@@ -14,12 +14,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <!-- Page Title - Change this to your name/brand (50-60 characters recommended) -->
-    <title>Privacy Policy | LittleLink</title>
+    <title>Privacy Policy | voidcore.dev</title>
     <link rel="icon" type="image/x-icon" href="/images/avatar.png"> <!-- Update this with your own favicon -->
 
 
     <!-- Meta Description - Write a description (150-160 characters recommended) -->
-    <meta name="description" content="Privacy policy and data collection information for LittleLink">
+    <meta name="description" content="Privacy policy and data collection information for voidcore.dev">
     <meta name="robots" content="noindex"> <!-- Since this is a utility page -->
 
     <!-- Stylesheets -->
@@ -41,8 +41,9 @@
         <section aria-labelledby="analytics-heading">
           <h2 id="analytics-heading">Analytics</h2>
           <p>I don't monitor anything</p>
+          <p>My hosting provider may log access (IP address, user agent) for security and performance monitoring. I do not analyze or store this personally.</p>
     
-          <h3>Kyo LLC</h3>
+          <h3>Kyo ZG</h3>
           <ul role="list">
             <li>Personal Data: none collected</li>
           </ul>
@@ -52,8 +53,9 @@
           <h2 id="external-content-heading">External Content</h2>
           <p>This type of service allows you to view content hosted on external platforms directly from the pages of this website and interact with them.</p>
           <p>This type of service might still collect web traffic data for the pages where the service is installed, even when Users do not use it.</p>
+          <p>All traffic is proxied through Cloudflare, which may log anonymized data like IP address and request details for DDoS mitigation and analytics.</p>
 
-          <h3>Kyo LLC</h3>
+          <h3>Kyo ZG</h3>
           <ul role="list">
             <li>Personal Data: none collected</li>
           </ul>
@@ -61,15 +63,15 @@
     
         <section aria-labelledby="hosting-heading">
           <h2 id="hosting-heading">Hosting and Infrastructure</h2>
-          <p>This is hosted on Github Pages</p>
-          <p>Idk if they collect any of your data. Probably tho</p>
+          <p>This is hosted on Github Pages and proxied through Cloudflare</p>
+          <p>All traffic is proxied through Cloudflare, which may log anonymized data like IP address and request details for DDoS mitigation and analytics.</p>
 
-          <h3>Kyo LLC</h3>
+          <h3>Kyo ZG</h3>
           <ul role="list">
             <li>Personal Data: none collected</li>
           </ul>
         </section>
-      <p>disclaimer: kyo llc is not an actual llc. it does not exist don't sue me</p>
+      <p>Disclaimer: ZG stands for Zombiegesellscahft, like AG (rights forms in german speaking countries). it is absolutely NOT real</p>
         <footer>
           <p>Build your own by forking <a href="https://littlelink.io" target="_blank" rel="noopener">LittleLink.</a></p>
         </footer>
