--- a/index.html
+++ b/index.html
@@ -57,6 +57,9 @@
 
               <a class="button button-default" href="https://dontasktoask.com" target="_blank" rel="noopener" role="button"><img class="icon" aria-hidden="true" src="images/icons/generic-website.svg" alt="Website Icon">Don't Ask To Ask</a>
 
+              <a class="button button-default" href="https://public.voidcore.dev" target="_blank" rel="noopener" role="button"><img class="icon" aria-hidden="true" src="images/icons/generic-website.svg" alt="Website Icon">Public Projects</a>
+
+
         </div>
 
         <footer>
